# wukong-cli

./: .gitignore  .gitmodules  .wukong.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  generate-completions.sh  test.rs
cli/: Cargo.toml  generate-completions.sh
cli/completions/bash/: wukong.bash
cli/completions/fish/: wukong.fish
cli/completions/zsh/: _wukong
cli/src/: app.rs  application_config.rs  config.rs  error.rs  lib.rs  loader.rs  logger.rs  main.rs  update.rs  wukong_client.rs
cli/src/auth/: google_cloud.rs  mod.rs  okta.rs  vault.rs
cli/src/commands/: completion.rs  init.rs  login.rs  mod.rs  tui.rs
cli/src/commands/application/: config.rs  info.rs  init.rs  logs.rs  mod.rs  theme.rs
cli/src/commands/config/: get.rs  list.rs  mod.rs  set.rs
cli/src/commands/deployment/: execute.rs  list.rs  mod.rs  rollback.rs  status.rs
cli/src/commands/dev/: mod.rs
cli/src/commands/gcloud/: mod.rs
cli/src/commands/google/: login.rs  mod.rs
cli/src/commands/pipeline/: ci_status.rs  describe.rs  list.rs  mod.rs
cli/src/commands/skills/: README.md  add.rs  archive.rs  common.rs  find.rs  init.rs  list.rs  mod.rs  publish.rs  remove.rs  restore.rs  update.rs
cli/src/commands/test/: mod.rs  platform.rs
cli/src/commands/tui/: action.rs  app.rs  hotkey.rs  mod.rs
cli/src/output/: error.rs  table.rs  tokenizer.rs
cli/src/utils/: inquire.rs  mod.rs  wukong_sdk.rs
cli/tests/: application.rs  application_instances.rs  config.rs  deployment.rs  dev_config.rs  pipeline.rs  skills.rs
cli/tests/snapshots/: application__wukong_application_help.snap  application__wukong_application_help.snap.new  application__wukong_application_info_should_failed_when_application_config_not_exist.snap  application__wukong_application_info_should_failed_when_application_config_not_exist.snap.new  application__wukong_application_info_should_failed_when_unauthenticated.snap  application__wukong_application_info_should_failed_when_unauthenticated.snap.new  application_instances__wukong_application_instances_help.snap  application_instances__wukong_application_instances_list_failed_if_not_authorized.snap  application_instances__wukong_application_instances_list_should_failed_when_application_config_file_not_exist.snap  application_instances__wukong_application_instances_list_should_failed_when_application_config_file_not_exist.snap.new  application_instances__wukong_application_instances_list_success.snap  completion__wukong_completion_bash.snap  completion__wukong_completion_bash.snap.new  completion__wukong_completion_fish.snap  completion__wukong_completion_help.snap  completion__wukong_completion_zsh.snap  config__wukong_config_get_should_failed_with_non_supported_field.snap  config__wukong_config_get_success.snap  config__wukong_config_help.snap  config__wukong_config_list_should_failed_without_config_file.snap  config__wukong_config_list_success.snap  config__wukong_config_list_success_without_login.snap  config__wukong_config_set_success_with_supported_field.snap  deployment__wukong_deployment_help.snap  deployment__wukong_deployment_list_should_failed_when_application_config_file_not_exist.snap  deployment__wukong_deployment_list_should_failed_when_application_config_file_not_exist.snap.new  deployment__wukong_deployment_list_should_failed_when_config_file_not_exist.snap  deployment__wukong_deployment_list_should_failed_when_unauthenticated.snap  deployment__wukong_deployment_list_success.snap  dev__wukong_dev_help.snap  dev_config__wukong_dev_config_diff_when_config_not_found.snap  dev_config__wukong_dev_config_diff_when_no_changes_found.snap  dev_config__wukong_dev_config_diff_when_secret_file_not_found.snap  dev_config__wukong_dev_config_diff_when_secret_key_not_found_from_bunker.snap  dev_config__wukong_dev_config_help.snap  dev_config__wukong_dev_config_pull_for_dev_exs_success.snap  dev_config__wukong_dev_config_pull_for_wukong_toml_success.snap  pipeline__wukong_pipeline_ci_status_should_failed_when_application_config_not_exist.snap.new  pipeline__wukong_pipeline_ci_status_success.snap  pipeline__wukong_pipeline_describe_should_failed_when_application_config_not_exist.snap.new  (+10 more)
crates/elixir-linter/: Cargo.toml
crates/elixir-linter/src/: lib.rs  main.rs
crates/elixir-linter/src/rules/: mod.rs  no_env_in_dev_config.rs  no_env_in_main_config.rs  use_import_config_with_file_exists_checking.rs
crates/wukong_telemetry_macro/: Cargo.toml
crates/wukong_telemetry_macro/src/: lib.rs
crates/wukong_telemetry_macro/src/utils/: ident_ext.rs  mod.rs  nested_meta_ext.rs
sdk/: Cargo.toml  build.rs
sdk/benches/: output_tokenizer_benchmark.rs
sdk/completions/bash/: wukong.bash
sdk/crates/elixir-linter/: Cargo.toml
sdk/crates/wukong_telemetry_macro/src/: lib.rs
sdk/src/: app.rs  error.rs  lib.rs
sdk/src/auth/: mod.rs
sdk/src/commands/: completion.rs  config.rs  init.rs  login.rs  mod.rs
sdk/src/commands/application/: info.rs  logs.rs  mod.rs
sdk/src/commands/deployment/: execute.rs  list.rs  mod.rs  rollback.rs
sdk/src/commands/dev/: mod.rs
sdk/src/commands/pipeline/: ci_status.rs  describe.rs  list.rs  (+1 more)
sdk/src/graphql/: application.rs  application_secret.rs  appsignal.rs  changelog.rs  database_branch.rs  deployment.rs  deployment_github.rs  github.rs  github_pipeline.rs  kubernetes.rs  mod.rs  pipeline.rs  schema.json  skill.rs
sdk/src/linter/: mod.rs
sdk/src/output/: error.rs  table.rs
sdk/src/utils/: annotations.rs  line.rs
sdk/tests/: dev_config.rs
sdk/tests/snapshots/: config__wukong_config_list_success_without_login.snap  deployment__wukong_deployment_list_should_failed_when_unauthenticated.snap  dev__wukong_dev_help.snap  dev_config__wukong_dev_config_diff_when_secret_key_not_found_from_bunker.snap  dev_config__wukong_dev_config_pull_for_dev_exs_success.snap  wukong__wukong_version_without_config_file.snap
telemetry/: Cargo.toml
telemetry-macro/: Cargo.toml
telemetry-macro/src/: lib.rs
telemetry-macro/src/utils/: attribute_args_ext.rs  ident_ext.rs  meta_ext.rs  mod.rs
telemetry/src/: lib.rs
(+303 files in other folders)
