[package]
name = "wukong"
version = "0.0.7-rc2"
edition = "2021"

[features]
prod = []

[profile.release]
strip = true
lto = true

[[bench]]
name = "output_tokenizer_benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help", "cargo"] }
clap_complete = { version = "4" }
dirs = "4.0"
indicatif = { version = "0.17.0", features = ["rayon"] }
tabled = { version = "0.10.0", features = ["color"] }
dialoguer = "0.10.1"
aion = "0.2.0"

# Making https request
reqwest = "0.11.11"
graphql_client = { version = "0.12.0", features = ["reqwest-rustls"] }
graphql-ws-client = { version = "0.4.0", features = ["client-graphql-client"] }
async-tungstenite = { version = "0.19.0", features = [
    "tokio-runtime",
    "tokio-rustls-native-certs",
] }
# Async runtime
tokio = { version = "1.26.0", features = ["full"] }

# Error handling
anyhow = "1.0.69"

# Serialization and Deserialization
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
thiserror = "1.0.39"
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
time-humanize = "0.1.3"

# logger
log = "0.4.17"
clap-verbosity-flag = "2.0.0"

# Auth
openidconnect = "2.5.0"
url = "2.3.1"
webbrowser = "0.8"

openssl = { version = "*", features = ["vendored"] }
owo-colors = "3.5.0"
base64 = "0.21.0"
human-panic = "1.1.0"
once_cell = "1.17.0"
edit = "0.1.4"

# Telemetry
wukong_telemetry_macro = { path = "crates/wukong_telemetry_macro" }
regex = "1.7.0"
chrono-tz = "0.8.1"

# elixir-linter
elixir_linter = { path = "crates/elixir-linter" }
miette = { version = "5.5.0", features = ["fancy"] }
ignore = "0.4.20"
rayon = "1.7.0"
tree-sitter = "0.20.9"
similar = { version = "2.2.1", features = ["inline"] }

# Google cloud client
google-logging2 = "5.0.2"
prost = "0.11.9"
tonic = { version = "0.9.2", features = ["tls", "tls-webpki-roots"] }
prost-types = "0.11.8"
yup-oauth2 = "8.1.1"
hyper = "0.14.25"
hyper-rustls = { version = "0.24.0", features = ["http2"] }
futures = { version = "0.3.28", default-features = false, features = [
    "compat",
    "io-compat",
] }
urlencoding = "2.1.2"

[dependencies.tree-sitter-elixir]
git = "https://github.com/elixir-lang/tree-sitter-elixir"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["cleanup-markdown"] }

[dev-dependencies]
httpmock = "0.6.7"
criterion = "0.4"
rexpect = "0.5.0"
assert_fs = "1.0.10"
insta = { version = "1.28.0", features = ["filters"] }
assert_cmd = "2.0.8"
git2 = "0.16.1"
serial_test = "2.0.0"


[profile.dev.package.insta]
opt-level = 3

[package.metadata.cross.build.env]
passthrough = ["WUKONG_HONEYCOMB_API_KEY", "OKTA_CLIENT_ID", "WUKONG_API_URL"]

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "apt update -y && apt install -y unzip",
    "curl -sSLO https://github.com/protocolbuffers/protobuf/releases/download/v22.3/protoc-22.3-linux-x86_64.zip",
    "unzip protoc-22.3-linux-x86_64.zip -d /usr",
]

[package.metadata.cross.target.x86_64-unknown-linux-musl]
pre-build = [
    "apt update -y && apt install -y unzip",
    "curl -sSLO https://github.com/protocolbuffers/protobuf/releases/download/v22.3/protoc-22.3-linux-x86_64.zip",
    "unzip protoc-22.3-linux-x86_64.zip -d /usr",
]
