[profile.release]
strip = true
lto = true

[profile.dev.package.insta]
opt-level = 3

[workspace]
members = ["cli", "sdk", "telemetry", "telemetry-macro"]

[build.env]
passthrough = ["WUKONG_HONEYCOMB_API_KEY", "OKTA_CLIENT_ID", "WUKONG_API_URL"]

[target.x86_64-unknown-linux-gnu]
pre-build = [
  "apt update -y && apt install -y unzip",
  "curl -sSLO https://github.com/protocolbuffers/protobuf/releases/download/v22.3/protoc-22.3-linux-x86_64.zip",
  "unzip protoc-22.3-linux-x86_64.zip -d /usr",
]

[target.x86_64-unknown-linux-musl]
pre-build = [
  "apt update -y && apt install -y unzip",
  "curl -sSLO https://github.com/protocolbuffers/protobuf/releases/download/v22.3/protoc-22.3-linux-x86_64.zip",
  "unzip protoc-22.3-linux-x86_64.zip -d /usr",
]
