[profile.release]
strip = true
lto = true

[profile.dev.package.insta]
opt-level = 3

[workspace]
members = ["cli", "sdk", "telemetry", "telemetry-macro"]

[workspace.dependencies]
tokio = { version = "1.28.2", features = ["full"] }
owo-colors = "3.5.0"
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_json = "1.0"
toml = "0.7.5"
thiserror = "1.0.40"
chrono = { version = "0.4.35", default-features = false }
base64 = "0.21.0"
reqwest = "0.11.11"
miette = { version = "5.10.0", features = ["fancy"] }
strum = { version = "0.26.1", features = ["derive"] }
