[package]
name = "wukong"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
prod = ["wukong-telemetry/prod"]

[[bench]]
name = "output_tokenizer_benchmark"
harness = false

[dependencies]
wukong-sdk = { path = "../sdk/" }

clap = { version = "4.3.8", features = ["derive", "wrap_help", "cargo"] }
clap_complete = "4.3.1"
dialoguer = "0.10.4"
indicatif = { version = "0.17.5", features = ["rayon"] }
tabled = { version = "0.10.0", features = ["color"] }
tokio = { version = "1.28.2", features = ["full"] }
owo-colors = "3.5.0"
serde = { version = "1.0.164", features = ["serde_derive"] }
once_cell = "1.18.0"

# logging
log = "0.4.19"
clap-verbosity-flag = "2.0.0"
thiserror = "1.0.40"
dirs = "5.0.1"
toml = "0.7.5"
aion = "0.2.0"
url = "2.3.1"
openidconnect = "3.3.0"
chrono = { version = "0.4.26", default-features = false, features = ["std"] }

human-panic = "1.1.5"
time-humanize = "0.1.3"
chrono-tz = "0.8.1"
regex = "1.7.0"
edit = "0.1.4"
base64 = "0.21.0"
reqwest = "0.11.11"
yup-oauth2 = "8.3.0"
webbrowser = "0.8"
prost = "0.11.9"
tonic = { version = "0.9.2", features = ["tls", "tls-webpki-roots"] }
prost-types = "0.11.8"
miette = { version = "5.10.0", features = ["fancy"] }
ignore = "0.4.20"
rayon = "1.7.0"
similar = { version = "2.2.1", features = ["inline"] }

# Telemetry
wukong-telemetry-macro = { path = "../telemetry-macro" }
wukong-telemetry = { path = "../telemetry" }

[dev-dependencies]
httpmock = "0.6.7"
criterion = "0.4"
rexpect = "0.5.0"
assert_fs = "1.0.10"
insta = { version = "1.28.0", features = ["filters"] }
assert_cmd = "2.0.8"
git2 = "0.16.1"
serial_test = "2.0.0"

# [build.env]
# passthrough = ["WUKONG_HONEYCOMB_API_KEY", "OKTA_CLIENT_ID", "WUKONG_API_URL"]

# [package.metadata.cross.target.x86_64-unknown-linux-gnu]
# pre-build = [
#   "apt update -y && apt install -y unzip",
#   "curl -sSLO https://github.com/protocolbuffers/protobuf/releases/download/v22.3/protoc-22.3-linux-x86_64.zip",
#   "unzip protoc-22.3-linux-x86_64.zip -d /usr",
# ]
#
# [package.metadata.cross.target.x86_64-unknown-linux-musl]
# pre-build = [
#   "apt update -y && apt install -y unzip",
#   "curl -sSLO https://github.com/protocolbuffers/protobuf/releases/download/v22.3/protoc-22.3-linux-x86_64.zip",
#   "unzip protoc-22.3-linux-x86_64.zip -d /usr",
# ]
