[package]
name = "wukong"
version = "2.0.2"
edition = "2021"
default-run = "wukong"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
prod = ["wukong-telemetry/prod"]

[[bench]]
name = "output_tokenizer_benchmark"
harness = false

[dependencies]
wukong-sdk = { path = "../sdk/" }
clap = { version = "4.5.3", features = ["derive", "wrap_help", "cargo"] }
clap_complete = "4.3.1"
dialoguer = "0.10.4"
indicatif = { version = "0.17.5", features = ["rayon"] }
tabled = { version = "0.10.0", features = ["color"] }

tokio.workspace = true
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

once_cell = "1.18.0"
crossterm = "0.27"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
textwrap = "0.16.0"

# logging
log = { version = "0.4.19", features = ["std"] }
clap-verbosity-flag = "2.0.0"
thiserror.workspace = true
dirs = "5.0.1"
aion = "0.2.0"
url = "2.3.1"
openidconnect = "3.3.0"
chrono.workspace = true

human-panic = "1.1.5"
time-humanize = "0.1.3"
chrono-tz = "0.8.1"
regex = "1.7.0"
edit = "0.1.4"
base64.workspace = true
reqwest.workspace = true
yup-oauth2 = "8.3.0"
webbrowser = "0.8"
async-trait = "0.1.78"
miette.workspace = true
ignore = "0.4.20"
rayon = "1.7.0"
similar = { version = "2.2.1", features = ["inline"] }
semver = "1.0.20"

# Telemetry
wukong-telemetry-macro = { path = "../telemetry-macro" }
wukong-telemetry = { path = "../telemetry" }
time = { version = "0.3.31", features = ["formatting", "parsing"] }
anyhow = "1.0.79"
heck = "0.4.1"
serde_yaml = "0.9.31"
inquire = { version = "0.6.2", features = ["editor"] }
strum.workspace = true

[dev-dependencies]
httpmock = "0.6.7"
criterion = "0.5.1"
assert_fs = "1.0.10"
insta = { version = "1.28.0", features = ["filters"] }
assert_cmd = "2.0.8"
git2 = "0.18.2"
serial_test = "2.0.0"

# [build.env]
# passthrough = ["WUKONG_HONEYCOMB_API_KEY", "OKTA_CLIENT_ID", "WUKONG_API_URL"]

# [package.metadata.cross.target.x86_64-unknown-linux-gnu]
# pre-build = [
#   "apt update -y && apt install -y unzip",
#   "curl -sSLO https://github.com/protocolbuffers/protobuf/releases/download/v22.3/protoc-22.3-linux-x86_64.zip",
#   "unzip protoc-22.3-linux-x86_64.zip -d /usr",
# ]
#
# [package.metadata.cross.target.x86_64-unknown-linux-musl]
# pre-build = [
#   "apt update -y && apt install -y unzip",
#   "curl -sSLO https://github.com/protocolbuffers/protobuf/releases/download/v22.3/protoc-22.3-linux-x86_64.zip",
#   "unzip protoc-22.3-linux-x86_64.zip -d /usr",
# ]
