[package]
name = "wukong-sdk"
version = "2.0.0"
edition = "2021"

[features]
prod = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Making https request
reqwest.workspace = true
graphql_client = { version = "0.12.0", features = ["reqwest-rustls"] }

# Async runtime
tokio.workspace = true

# Serialization and Deserialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
chrono.workspace = true

# logger
log = "0.4.17"

openssl = { version = "*", features = ["vendored"] }
owo-colors = "3.5.0"

# elixir-linter
elixir_linter = { path = "crates/elixir-linter" }
miette.workspace = true
tree-sitter = "0.20.9"

# Google cloud client
google-logging2 = "5.0.2"
prost = "0.11.9"
tonic = { version = "0.9.2", features = ["tls", "tls-webpki-roots"] }
prost-types = "0.11.8"
hyper = "0.14.25"
hyper-rustls = { version = "0.24.0", features = ["http2"] }
futures = { version = "0.3.28", default-features = false, features = [
    "compat",
    "io-compat",
] }
urlencoding = "2.1.2"

# Utils
strum.workspace = true
base64.workspace = true

[dependencies.tree-sitter-elixir]
git = "https://github.com/elixir-lang/tree-sitter-elixir"
tag = "v0.1.0"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["cleanup-markdown"] }

[dev-dependencies]
httpmock = "0.6.7"
assert_fs = "1.0.10"
assert_cmd = "2.0.8"
serial_test = "2.0.0"

# [build.env]
# passthrough = ["WUKONG_HONEYCOMB_API_KEY", "OKTA_CLIENT_ID", "WUKONG_API_URL"]

# [package.metadata.cross.target.x86_64-unknown-linux-gnu]
# pre-build = [
#     "apt update -y && apt install -y unzip",
#     "curl -sSLO https://github.com/protocolbuffers/protobuf/releases/download/v22.3/protoc-22.3-linux-x86_64.zip",
#     "unzip protoc-22.3-linux-x86_64.zip -d /usr",
# ]
#
# [package.metadata.cross.target.x86_64-unknown-linux-musl]
# pre-build = [
#     "apt update -y && apt install -y unzip",
#     "curl -sSLO https://github.com/protocolbuffers/protobuf/releases/download/v22.3/protoc-22.3-linux-x86_64.zip",
#     "unzip protoc-22.3-linux-x86_64.zip -d /usr",
# ]
