[package]
name = "wukong-telemetry"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
prod = []

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json = "1.0"
reqwest.workspace = true
dirs = "5.0.1"
once_cell = "1.17.0"

# [build.env]
# passthrough = ["WUKONG_HONEYCOMB_API_KEY", "OKTA_CLIENT_ID", "WUKONG_API_URL"]
