[package]
name = "elixir_linter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
miette = { version = "5.5.0", features = ['fancy'] }
thiserror = "1.0.38"
tree-sitter = "0.20.9"

[dependencies.tree-sitter-elixir]
git = "https://github.com/elixir-lang/tree-sitter-elixir"
