[package]
name = "wukong_telemetry_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wukong_telemetry_macro"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
chrono = "0.4.23"
lazy_static = "1.4.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
dirs = "4.0.0"
serde_json = "1.0.89"
